<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hintInputText" />

    <Button
        android:id="@+id/buttonEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/decryptButton" />

    <TextView
        android:id="@+id/ecryptedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        tools:text="@string/encryptText"
        android:text="@string/encryptText"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/viewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_warning_amber_24" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encryptError"
            android:textColor="@color/red" />
    </LinearLayout>

</LinearLayout>